[project]
name = "flux"
version = "0.1.0"
description = "Inference codebase for FLUX.2"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Black Forest Labs", email = "support@blackforestlabs.ai" }
]
license = { file = "LICENSE.md" }

dependencies = [
  "torch",
  "torchvision",
  "einops",
  "transformers",
  "safetensors",
  "fire",
  "openai",
  "accelerate",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.8",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
